# coxstream

./: .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
src/coxstream/: __init__.py  _kernel.pyi  _kernel.pyx  coxstream.py
tests/: test_coxstream.py
