[build-system]
requires      = ["setuptools>=64", "Cython>=3.0", "numpy>=1.24"]
build-backend = "setuptools.build_meta"

[project]
name        = "coxstream"
version     = "0.1.0"
description = "Exact out-of-core Cox proportional hazards regression via streaming Newton-Raphson"
readme      = "README.md"
license     = "MIT"
authors     = [{ name = "Tommy Carstensen", email = "zenodo@tommycarstensen.com" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]
keywords = [
    "survival analysis",
    "cox proportional hazards",
    "out-of-core",
    "streaming",
    "epidemiology",
    "statistics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.optional-dependencies]
parquet = ["pyarrow>=14"]
test    = ["pytest>=7"]

[project.urls]
Homepage   = "https://github.com/tommycarstensen/coxstream"
Repository = "https://github.com/tommycarstensen/coxstream"
Issues     = "https://github.com/tommycarstensen/coxstream/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
coxstream = ["*.pyx"]
